fix: links to map

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0 viewport-fit=cover"
     />
-    <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/variables.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>Vaccination</title>
   </head>
   <body>
@@ -48,13 +48,13 @@
           <div class="benefit-about">
             <div class="group-item">
               <div class="figure-benefit">
-                <img src="/assets/icons/shield.svg" alt="shield" />
+                <img src="./assets/icons/shield.svg" alt="shield" />
               </div>
               <div class="content-option">Best protection</div>
             </div>
             <div class="group-item">
               <div class="figure-benefit">
-                <img src="/assets/icons/star.svg" alt="star" />
+                <img src="./assets/icons/star.svg" alt="star" />
               </div>
               <div class="content-option">Selected Vaccines</div>
             </div>
@@ -62,7 +62,7 @@
 
           <div class="group-item-schedule">
             <div class="figure-schedule">
-              <img src="/assets/icons/clock.svg" alt="clock" />
+              <img src="./assets/icons/clock.svg" alt="clock" />
             </div>
             <div class="content-option">Schedule your vaccinations</div>
           </div>
@@ -72,7 +72,7 @@
               <div class="group-item-form">
                 <div class="label-select">
                   <div class="figure-schedule">
-                    <img src="/assets/icons/location.svg" alt="location" />
+                    <img src="./assets/icons/location.svg" alt="location" />
                   </div>
                   <div class="content-option">Location</div>
                 </div>
@@ -84,7 +84,7 @@
                 <!--  -->
                 <div class="label-select">
                   <div class="figure-schedule">
-                    <img src="/assets/icons/date.svg" alt="Date" />
+                    <img src="./assets/icons/date.svg" alt="Date" />
                   </div>
                   <div class="content-option">Date</div>
                 </div>
@@ -95,7 +95,7 @@
               <div class="group-item-form">
                 <div class="label-select">
                   <div class="figure-schedule">
-                    <img src="/assets/icons/vaccine.svg" alt="vaccine" />
+                    <img src="./assets/icons/vaccine.svg" alt="vaccine" />
                   </div>
                   <div class="content-option">Vaccine Type</div>
                 </div>
@@ -114,7 +114,7 @@
       </section>
       <section class="types_vacccines">
         <img
-          src="/assets/img/vaccines.png"
+          src="./assets/img/vaccines.png"
           alt="types vaccines"
           class="img-types-vaccines"
         />
@@ -136,7 +136,7 @@
           <div class="card-content">
             <div class="card-header">
               <div class="figure-card">
-                <img src="/assets/icons/adjustament.svg" alt="adjustament" />
+                <img src="./assets/icons/adjustament.svg" alt="adjustament" />
               </div>
             </div>
             <div class="card-text">
@@ -155,7 +155,7 @@
           <div class="card-content">
             <div class="card-header">
               <div class="figure-card">
-                <img src="/assets/icons/shield_bg.svg" alt="shield card" />
+                <img src="./assets/icons/shield_bg.svg" alt="shield card" />
               </div>
             </div>
             <div class="card-text">
@@ -173,7 +173,7 @@
           <div class="card-content">
             <div class="card-header">
               <div class="figure-card">
-                <img src="/assets/icons/users.svg" alt="users card" />
+                <img src="./assets/icons/users.svg" alt="users card" />
               </div>
             </div>
             <div class="card-text">
@@ -192,7 +192,7 @@
           <div class="card-content">
             <div class="card-header">
               <div class="figure-card">
-                <img src="/assets/icons/group.svg" alt="group card" />
+                <img src="./assets/icons/group.svg" alt="group card" />
               </div>
             </div>
             <div class="card-text">
@@ -226,7 +226,7 @@
       <section class="preparation__list">
         <div class="col_img_list">
           <img
-            src="/assets/img/preparation.svg"
+            src="./assets/img/preparation.svg"
             alt="preparation"
             class="img-preparation"
           />
@@ -236,14 +236,14 @@
             <div class="row-label-details">
               <div class="img-detail">
                 <div class="figure-schedule">
-                  <img src="/assets/icons/location.svg" alt="location" />
+                  <img src="./assets/icons/location.svg" alt="location" />
                 </div>
               </div>
               <div class="label-detail">
                 <span>Avoid Alcoholic beverages</span>
               </div>
               <div class="arrow-detail">
-                <img src="/assets/icons/arrow-down.svg" alt="arrow down" />
+                <img src="./assets/icons/arrow-down.svg" alt="arrow down" />
               </div>
             </div>
             <div class="row-content-details">
@@ -254,7 +254,7 @@
             <div class="row-label-details">
               <div class="img-detail">
                 <div class="figure-schedule">
-                  <img src="/assets/icons/location.svg" alt="location" />
+                  <img src="./assets/icons/location.svg" alt="location" />
                 </div>
               </div>
               <div class="label-detail">
@@ -262,7 +262,7 @@
               </div>
               <div class="arrow-detail">
                 <img
-                  src="/assets/icons/arrow-down.svg"
+                  src="./assets/icons/arrow-down.svg"
                   alt="arrow down"
                   class="rotate-img"
                 />
@@ -286,7 +286,7 @@
             <div class="row-label-details">
               <div class="img-detail">
                 <div class="figure-schedule">
-                  <img src="/assets/icons/location.svg" alt="location" />
+                  <img src="./assets/icons/location.svg" alt="location" />
                 </div>
               </div>
               <div class="label-detail">
@@ -294,7 +294,7 @@
               </div>
               <div class="arrow-detail">
                 <img
-                  src="/assets/icons/arrow-down.svg"
+                  src="./assets/icons/arrow-down.svg"
                   alt="arrow down"
                 />
               </div>
@@ -305,7 +305,7 @@
             <div class="row-label-details">
               <div class="img-detail">
                 <div class="figure-schedule">
-                  <img src="/assets/icons/location.svg" alt="location" />
+                  <img src="./assets/icons/location.svg" alt="location" />
                 </div>
               </div>
               <div class="label-detail">
@@ -313,7 +313,7 @@
               </div>
               <div class="arrow-detail">
                 <img
-                  src="/assets/icons/arrow-down.svg"
+                  src="./assets/icons/arrow-down.svg"
                   alt="arrow down"
                 />
               </div>
@@ -325,7 +325,7 @@
             <div class="row-label-details">
               <div class="img-detail">
                 <div class="figure-schedule">
-                  <img src="/assets/icons/location.svg" alt="location" />
+                  <img src="./assets/icons/location.svg" alt="location" />
                 </div>
               </div>
               <div class="label-detail">
@@ -333,7 +333,7 @@
               </div>
               <div class="arrow-detail">
                 <img
-                  src="/assets/icons/arrow-down.svg"
+                  src="./assets/icons/arrow-down.svg"
                   alt="arrow down"
                 />
               </div>
@@ -364,7 +364,7 @@
               <div class="header-card-contact">
                 <div class="wrapper_img_contact">
                   <div class="figure-contact">
-                    <img src="/assets/icons/phone.svg" alt="phone" class="" />
+                    <img src="./assets/icons/phone.svg" alt="phone" class="" />
                   </div>
                 </div>
                 <div class="text__contact">
@@ -382,7 +382,7 @@
               <div class="header-card-contact">
                 <div class="wrapper_img_contact">
                   <div class="figure-contact">
-                    <img src="/assets/icons/chat.svg" alt="chat" class="" />
+                    <img src="./assets/icons/chat.svg" alt="chat" class="" />
                   </div>
                 </div>
                 <div class="text__contact">
@@ -400,7 +400,7 @@
               <div class="header-card-contact">
                 <div class="wrapper_img_contact">
                   <div class="figure-contact">
-                    <img src="/assets/icons/camera.svg" alt="chat" class="" />
+                    <img src="./assets/icons/camera.svg" alt="chat" class="" />
                   </div>
                 </div>
                 <div class="text__contact">
@@ -418,7 +418,7 @@
               <div class="header-card-contact">
                 <div class="wrapper_img_contact">
                   <div class="figure-contact">
-                    <img src="/assets/icons/camera.svg" alt="chat" class="" />
+                    <img src="./assets/icons/camera.svg" alt="chat" class="" />
                   </div>
                 </div>
                 <div class="text__contact">
@@ -436,7 +436,7 @@
         </div>
         <div class="col_img_list">
           <img
-            src="/assets/img/doctor.svg"
+            src="./assets/img/doctor.svg"
             alt="doctor"
             class="img-emergency"
           />
